# VerbLemmaCounter

./: README.md  pyproject.toml
lemmy/: main.py
tests/: test_main.py
