[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["Belkiss <belkiss.souayed@uzh.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
de-core-news-sm = {url = "https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.5.0/de_core_news_sm-3.5.0-py3-none-any.whl"}
spacy = "^3.5.0"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
